--- a/src/index.css
+++ b/src/index.css
@@ -92,15 +92,18 @@ html {
 
 .navLink {
   @apply text-white
+  ml-[100px]
+ 
 }
 
 .activeNavLink {
   @apply font-bold
+ 
 }
 
-.navLink {
+/* .navLink {
 font-family: "Barlow", sans-serif;
-}
+} */
 
 #hero {
   box-shadow: inset 0 0 100px 50px rgba(0, 0, 0, 0.5);
