--- a/src/index.css
+++ b/src/index.css
@@ -101,9 +101,9 @@ html {
  
 }
 
-/* .navLink {
+.navLink {
 font-family: "Barlow", sans-serif;
-} */
+}
 
 #hero {
   box-shadow: inset 0 0 100px 50px rgba(0, 0, 0, 0.5);
